objects/ssot__RealEstateProperty__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AddressId__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BathroomCount__c</fullName>
        <label>Bathroom Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BedroomCount__c</fullName>
        <label>Bedroom Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BuiltUpArea__c</fullName>
        <label>Built Up Area</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChimneyCount__c</fullName>
        <label>Chimney Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConstructionClass__c</fullName>
        <label>Construction Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DwellingType__c</fullName>
        <label>Dwelling Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FenceCount__c</fullName>
        <label>Fence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FloorCount__c</fullName>
        <label>Floor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FloorType__c</fullName>
        <label>Floor Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FoundationType__c</fullName>
        <label>Foundation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GarageSpaceCount__c</fullName>
        <label>Garage Space Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GarageType__c</fullName>
        <label>Garage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Real Estate Property Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBasementIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Basement Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsChimneyIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Chimney Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsGatedCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Gated Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPropertyOnSlope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Property On Slope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSepticSystemIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Septic System Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSewerSystemIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sewer System Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSwimmingPoolIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Swimming Pool Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__KitchenCount__c</fullName>
        <label>Kitchen Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentedRoomCount__c</fullName>
        <label>Rented Room Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResidentSmokerCount__c</fullName>
        <label>Resident Smoker Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RoofLastRepairedYear__c</fullName>
        <label>Roof Last Repaired Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RoofType__c</fullName>
        <label>Roof Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__YearBuilt__c</fullName>
        <label>Year Built</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>